test: pin cluster init re-run as an in-place, consented, byte-preserving merge (#311)